expanded basis set to allow for use of any basis set that has an angular momentum of 0

--- a/hartree_fock.ipynb
+++ b/hartree_fock.ipynb
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "Molecule\n",
-      "Basis Set: STO-6g\n",
-      "Total Number of Electrons: 1\n",
+      "Basis Set: 6-21G\n",
+      "Total Number of Electrons: 2\n",
       "Atoms: \n",
-      "     Atomic Number: 1, Electrons: 1, Coordinate: X: 1 Y: 1 Z: 1\n"
+      "     Atomic Number: 2, Electrons: 2, Coordinate: X: 1 Y: 1 Z: 1\n"
      ]
     }
    ],
@@ -35,20 +35,20 @@
     "scf = importNotebook(\"hartree_scf\")\n",
     "\n",
     "#define SCF convergence critera, and max number of iteration cycles\n",
-    "SCF_CONVERGENCE = pow(10, -50)\n",
+    "SCF_CONVERGENCE = pow(10, -100)\n",
     "MAX_ITERATIONS = 100\n",
     "\n",
     "#Step 1\n",
     "#Specify Molecules, Nuclear Coordinates, and Charge of the nucli Number of Electrons,\n",
     "\n",
     "#generate an h2 atom with a distance of 1.4 AU to compare with Szabo pg. 160\n",
-    "R = 1.4632\n",
+    "R = 1.4\n",
     "system = molecule()\n",
-    "system.addAtom(atom(vector(1,1,1), 1, 1))\n",
+    "system.addAtom(atom(vector(1,1,1), 2, 2))\n",
     "#system.addAtom(atom(vector(1,1,1+R), 1,1))\n",
     "\n",
     "#add a basis set\n",
-    "system.addBasis(\"STO-6g\")\n",
+    "system.addBasis(\"6-21G\")\n",
     "\n",
     "system.display()"
    ]
@@ -65,19 +65,34 @@
      "output_type": "stream",
      "text": [
       "Overlap Matrix: \n",
-      "[[1.]]\n",
+      "[[1.         0.59521595]\n",
+      " [0.59521595 1.        ]]\n",
       "\n",
       "Electron Kinetic Energy Matrix: \n",
-      "[[0.76852215]]\n",
+      "[[3.9161238 0.5789494]\n",
+      " [0.5789494 0.5744895]]\n",
       "\n",
       "Nucli 0-Electron Attraction Matrix: \n",
-      "[[-1.23956121]]\n",
+      "[[-5.48968847 -2.23529223]\n",
+      " [-2.23529223 -1.97512902]]\n",
       "\n",
       "Electron Repulsion Tensor: \n",
-      "[[[[0.77499852]]]]\n",
+      "[[[[1.80325459 0.87650682]\n",
+      "   [0.87650682 0.91700828]]\n",
+      "\n",
+      "  [[0.87650682 0.45207726]\n",
+      "   [0.45207726 0.51467807]]]\n",
+      "\n",
+      "\n",
+      " [[[0.87650682 0.45207726]\n",
+      "   [0.45207726 0.51467807]]\n",
+      "\n",
+      "  [[0.91700828 0.51467807]\n",
+      "   [0.51467807 0.69831356]]]]\n",
       "\n",
       "Electronic Hamiltonian :\n",
-      "[[-0.47103905]]\n",
+      "[[-1.57356468 -1.65634283]\n",
+      " [-1.65634283 -1.40063952]]\n",
       "\n"
      ]
     }
@@ -148,12 +163,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.]]\n",
-      "SCF Iteration #1, Electronic Energy: 0.0 Hartrees, Total Energy: 0.0 Hartrees\n",
-      "[[1.]]\n",
-      "SCF Iteration #2, Electronic Energy: 0.0 Hartrees, Total Energy: 0.0 Hartrees\n",
-      "[[1.]]\n",
-      "SCF Iteration #3, Electronic Energy: 0.0 Hartrees, Total Energy: 0.0 Hartrees\n"
+      "SCF Iteration #1, Electronic Energy: -2.7351099044716616 Hartrees, Total Energy: -2.7351099044716616 Hartrees\n",
+      "SCF Iteration #2, Electronic Energy: -2.835262969514034 Hartrees, Total Energy: -2.835262969514034 Hartrees\n",
+      "SCF Iteration #3, Electronic Energy: -2.835678080552964 Hartrees, Total Energy: -2.835678080552964 Hartrees\n",
+      "SCF Iteration #4, Electronic Energy: -2.8356798659098947 Hartrees, Total Energy: -2.8356798659098947 Hartrees\n",
+      "SCF Iteration #5, Electronic Energy: -2.835679873607232 Hartrees, Total Energy: -2.835679873607232 Hartrees\n",
+      "SCF Iteration #6, Electronic Energy: -2.835679873640423 Hartrees, Total Energy: -2.835679873640423 Hartrees\n",
+      "SCF Iteration #7, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
+      "SCF Iteration #8, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
+      "SCF Iteration #9, Electronic Energy: -2.8356798736405677 Hartrees, Total Energy: -2.8356798736405677 Hartrees\n",
+      "SCF Iteration #10, Electronic Energy: -2.8356798736405673 Hartrees, Total Energy: -2.8356798736405673 Hartrees\n",
+      "SCF Iteration #11, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
+      "SCF Iteration #12, Electronic Energy: -2.835679873640566 Hartrees, Total Energy: -2.835679873640566 Hartrees\n",
+      "SCF Iteration #13, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
+      "SCF Iteration #14, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
+      "SCF Iteration #15, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
+      "SCF Iteration #16, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
+      "SCF Iteration #17, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n"
      ]
     }
    ],
@@ -180,8 +206,6 @@
     "    P = scf.densityMatrix(C, system.N, size)\n",
     "    G = scf.G(electronRepulsion, P, size)\n",
     "    F = H + G\n",
-    "\n",
-    "    print(MO)\n",
     "    \n",
     "    #compute the new expectation energy \n",
     "    E.append(scf.expectationEnergy(H, F, P))\n",
