--- a/hartree_integrals.ipynb
+++ b/hartree_integrals.ipynb
@@ -60,35 +60,33 @@
     "    #init empty list for the overlap matrix\n",
     "    S = [] \n",
     "    \n",
-    "\t#iterate thorugh all atoms\t\n",
-    "    for index1, atom1 in enumerate(molecule.atomData):\n",
-    "        S.append([])\n",
+    "    #get basis function for the molecule\n",
+    "    #is an array with all basis functions from the atoms in the molecule contained within it\n",
+    "    basis = molecule.getBasis()\n",
+    "    \n",
+    "    #iterate through all basisSets used in the molecule\n",
+    "    for index1, psi1 in enumerate(basis):\n",
+    "            S.append([])\n",
+    "            for index2, psi2 in enumerate(basis):\n",
+    "                S[index1].append(0)\t\t\t\n",
     "\n",
-    "        for index2, atom2 in enumerate(molecule.atomData):\n",
-    "            S[index1].append(0)\t\t\t\n",
-    "            \n",
-    "            #prepare basis sets \n",
-    "            psi1 = atom1.basisSet\n",
-    "            psi2 = atom2.basisSet\n",
+    "                #overlap integral is simply the integral of basis function 1 times basis function 2\n",
+    "                #is done with guassians thorough guassian multiplication, which results in a new \n",
+    "                #guassian which is then integrated analytically, \n",
+    "                #and whose analytical equation is solved here for the overlap \n",
     "\n",
-    "            #overlap integral is simply the integral of basis function 1 times basis function 2\n",
-    "            #is done with guassians thorough guassian multiplication, which results in a new \n",
-    "            #guassian which is then integrated analytically, \n",
-    "            #and whose analytical equation is solved here for the overlap \n",
-    "            \n",
-    "            #iterate through all contracted guassians that compose psi1 and psi 2\n",
-    "            for cg1 in psi1.contractedGuassians:\n",
-    "                for cg2 in psi2.contractedGuassians:\n",
-    "                    \n",
-    "                    #get overlap contracted guassian \n",
-    "                    cg3 = cg1.multiply(cg2)\n",
-    "                \n",
-    "                    #get constant to multiply overlap integral by \n",
-    "                    constant = cg3.constant * cg1.contraction * cg2.contraction\n",
-    "                 \n",
-    "                    #compute overlap coefficent\n",
-    "                    S[index1][index2] += constant * pow((math.pi/cg3.orbitalExponet), 3/2) \t\n",
+    "                #iterate through all contracted guassians that compose psi1 and psi 2\n",
+    "                for cg1 in psi1.contractedGuassians:\n",
+    "                    for cg2 in psi2.contractedGuassians:\n",
     "\n",
+    "                        #get overlap contracted guassian \n",
+    "                        cg3 = cg1.multiply(cg2)\n",
+    "\n",
+    "                        #get constant to multiply overlap integral by \n",
+    "                        constant = cg3.constant * cg1.contraction * cg2.contraction\n",
+    "\n",
+    "                        #compute overlap coefficent\n",
+    "                        S[index1][index2] += constant * pow((math.pi/cg3.orbitalExponet), 3/2) \t\n",
     "    return S"
    ]
   },
@@ -117,24 +115,23 @@
     "    \n",
     "    #init empty list for the kinetic energy matrix\n",
     "    T = []\n",
-    "\t\n",
-    "\t#iterate thorugh all atoms\t\n",
-    "    for index1, atom1 in enumerate(molecule.atomData):\n",
+    "    \n",
+    "    basis = molecule.getBasis()\n",
+    "    \n",
+    "    #iterate through all basis functions used within the molecule\n",
+    "    for index1, psi1 in enumerate(basis):\n",
     "        T.append([])\n",
-    "        for index2, atom2 in enumerate(molecule.atomData):\n",
-    "            T[index1].append(0)\t\t\t\n",
-    "            \n",
-    "            #prepare basis sets \n",
-    "            psi1 = atom1.basisSet\n",
-    "            psi2 = atom2.basisSet  \n",
-    "            \n",
+    "        \n",
+    "        for index2, psi2 in enumerate(basis):\n",
+    "            T[index1].append(0)\t\t\n",
+    "\n",
     "            #KE integral computed by taking guassian 1 times -1/2 del squared acting upon guassian 2\n",
     "            #equation located on page 427 of Szabo\n",
-    "            \n",
+    "\n",
     "            #iterate through all the contracted guassians of psi1 and psi2 \n",
     "            for cg1 in psi1.contractedGuassians:\n",
     "                for cg2 in psi2.contractedGuassians:\n",
-    "                \n",
+    "\n",
     "                    ab = cg1.orbitalExponet * cg2.orbitalExponet\n",
     "                    p = cg1.orbitalExponet + cg2.orbitalExponet\n",
     "                    distanceSquared = pow((cg1.coord - cg2.coord).magnitude(), 2)\n",
@@ -142,7 +139,7 @@
     "                    c2 = pow(math.pi / p, 3/2)\n",
     "                    e = math.exp(-c1*distanceSquared)\n",
     "                    constant = cg1.contraction * cg2.contraction * cg1.constant * cg2.constant * c1 * c2\n",
-    "                   \n",
+    "\n",
     "                    T[index1][index2] += constant * (3 - (2*c1*distanceSquared) ) * e\n",
     "    return T"
    ]
@@ -240,6 +237,8 @@
     "    #init nuclear attraction matrix \n",
     "    #each nuclear attraction list is composed of 1 matrix for each atom in the molecule, which includes a psi x psi matrix of values from the primative guassian compuatation \n",
     "    V = []\n",
+    "\n",
+    "    basis = molecule.getBasis()\n",
     "    \n",
     "    #used for graphing purposes\n",
     "    distances = []\n",
@@ -255,54 +254,52 @@
     "        errorInputs.append([])\n",
     "        errorValues.append([])\n",
     "\n",
-    "        #iterate through all the atoms present and availible\n",
-    "        for index1, atom1 in enumerate(molecule.atomData):\n",
+    "        #iterate through all basis functions used\n",
+    "        for index1, psi1 in enumerate(basis):\n",
     "            V[atomIndex].append([])\n",
-    "            \n",
+    "\n",
     "            #prepare graph lists\n",
     "            distances[atomIndex].append([])\n",
     "            errorInputs[atomIndex].append([])\n",
     "            errorValues[atomIndex].append([])\n",
-    "            \n",
-    "            for index2, atom2 in enumerate(molecule.atomData):\n",
+    "\n",
+    "            for index2, psi2 in enumerate(basis):\n",
     "                V[atomIndex][index1].append(0)\n",
-    "                \n",
+    "\n",
     "                #prepare graph lists\n",
     "                distances[atomIndex][index1].append([])\n",
     "                errorInputs[atomIndex][index1].append([])\n",
     "                errorValues[atomIndex][index1].append([])\n",
-    "                \n",
-    "                #prepare basis sets\n",
-    "                psi1 = atom1.basisSet\n",
-    "                psi2 = atom2.basisSet\n",
-    "            \n",
+    "\n",
     "                #iterate through all the primative guassians\n",
     "                for cg1 in psi1.contractedGuassians:\n",
     "                    for cg2 in psi2.contractedGuassians:\n",
-    "                   \n",
+    "\n",
     "                        #compute data needed for the integral\n",
     "                        ab = cg1.orbitalExponet * cg2.orbitalExponet\n",
     "                        p = cg1.orbitalExponet + cg2.orbitalExponet\n",
     "                        e = (-ab/p) *  pow((cg1.coord - cg2.coord).magnitude(), 2)\n",
     "                        c1 = (-2 * math.pi) / p\n",
     "                        cg3 = cg1.multiply(cg2)\n",
-    "                                             \n",
+    "\n",
     "                        constant = cg1.contraction * cg2.contraction * c1 * atom.Z * math.exp(e)\n",
     "                        errorInput = p * math.pow((cg3.coord - atom.coord).magnitude(), 2)\n",
-    "                    \n",
+    "\n",
     "                        #error input cutoff and else equation from Szabo pg. 437\n",
     "                        #use first error equation to simulate asymptote for very small values\n",
-    "                        #but, due to numerical errors with python, small numbers only occurs if index1==index2, but sometimes, such values may be larger, resulting in a negative error that is remedied by the second error equation\n",
+    "                        #but, due to numerical errors with python, small numbers only occurs \n",
+    "                        #if index1==index2, but sometimes, such values may be larger,\n",
+    "                        #resulting in a negative error that is remedied by the second error equation\n",
     "                        electronNuclearDistance = (cg3.coord - atom.coord).magnitude()\n",
     "                        error = errorFunction(errorInput, electronNuclearDistance)\n",
-    "                    \n",
+    "\n",
     "                        #add data for graphing purposes\n",
     "                        distances[atomIndex][index1][index2].append(electronNuclearDistance)\n",
     "                        errorInputs[atomIndex][index1][index2].append(errorInput)\n",
     "                        errorValues[atomIndex][index1][index2].append(error)\n",
-    "                        \n",
+    "\n",
     "                        V[atomIndex][index1][index2] += constant * error * cg1.constant * cg2.constant \n",
-    "    \n",
+    "\n",
     "    return V"
    ]
   },
@@ -332,24 +329,18 @@
     "    #constructs a tensor equal to the size of the basis set squared\n",
     "    electronRepulsion = []\n",
     "\n",
+    "    basis = molecule.getBasis()\n",
+    "    \n",
     "    #iterate through PsiA1PsiA2 and PsiB1PsiB2\n",
-    "    for index1, atom1 in enumerate(molecule.atomData):\n",
+    "    for index1, psi1 in enumerate(basis):\n",
     "        electronRepulsion.append([])\n",
-    "        for index2, atom2 in enumerate(molecule.atomData):\n",
+    "        for index2, psi2 in enumerate(basis):\n",
     "            electronRepulsion[index1].append([])\n",
     "            \n",
-    "            #prepare atomic basis sets\n",
-    "            psi1 = atom1.basisSet\n",
-    "            psi2 = atom2.basisSet\n",
-    "            \n",
-    "            for index3, atom3 in enumerate(molecule.atomData):\n",
+    "            for index3, psi3 in enumerate(basis):\n",
     "                electronRepulsion[index1][index2].append([])\n",
-    "                for index4, atom4 in enumerate(molecule.atomData):\n",
+    "                for index4, psi4 in enumerate(basis):\n",
     "                    electronRepulsion[index1][index2][index3].append(0)\n",
-    "                    \n",
-    "                    #prepare atomic basissets\n",
-    "                    psi3 = atom3.basisSet\n",
-    "                    psi4 = atom4.basisSet\n",
     "\n",
     "                    #iterate through all of the primative guassians for each of the wavefunctions\n",
     "                    for cg1 in psi1.contractedGuassians:\n",
