Adds new file structure to accomodate multiple projects for the Cat Lab

--- a/Hartree-Fock/HartreeClass.ipynb
+++ b/Hartree-Fock/HartreeClass.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "from molecule import atom\n",
     "from molecule import vector\n",
-    "from molecule import guassian\n",
+    "from molecule import gaussian\n",
     "from molecule import molecule\n",
     "from notebookImporter import importNotebook\n",
     "\n",
