--- a/Hartree-Fock/hartree_integrals.ipynb
+++ b/Hartree-Fock/hartree_integrals.ipynb
@@ -12,12 +12,12 @@
     "<p>\n",
     "    <br/>\n",
     "    \n",
-    "Within this python script, the wave functions, $\\psi$, that represent atomic wavefunctions are each composed of a set of contracted guassians that are added lineary and multiplied by respective contraction coeffiecents to produce the wavefunction $\\psi$. A guassian is represented as $e^{-\\alpha|R_A|^2}$.  When $\\psi_1$ and $\\psi_2$ are being integrated, $\\int\\psi_1\\psi_2d\\tau$, the resulting integral is the multiplication of two guassians, such that the integration reduces to: $$[\\dfrac{\\pi}{(\\alpha+\\beta)}]^{\\dfrac{3}{2}}\\cdot e^{\\dfrac{-\\alpha\\beta}{\\alpha+\\beta}\\cdot|R_a-R_b|^2}$$\n",
+    "Within this python script, the wave functions, $\\psi$, that represent atomic wavefunctions are each composed of a set of contracted gaussians that are added lineary and multiplied by respective contraction coeffiecents to produce the wavefunction $\\psi$. A gaussian is represented as $e^{-\\alpha|R_A|^2}$.  When $\\psi_1$ and $\\psi_2$ are being integrated, $\\int\\psi_1\\psi_2d\\tau$, the resulting integral is the multiplication of two gaussians, such that the integration reduces to: $$[\\dfrac{\\pi}{(\\alpha+\\beta)}]^{\\dfrac{3}{2}}\\cdot e^{\\dfrac{-\\alpha\\beta}{\\alpha+\\beta}\\cdot|R_a-R_b|^2}$$\n",
     "\n",
     "The rest of this description will focus upon explaining the meaning behind the nomenclature used in variable naming in this script in regrads to the above analytical expansion of $\\int\\psi_1\\psi_2d\\tau$.\n",
     "\n",
-    "$\\alpha$ and $\\beta$ both refer to the orbital coefficent of a guassian that represents how widespread or narrow the guassian will be. The sum of $\\alpha+\\beta$ is $p$, while the product of $\\alpha\\cdot\\beta$ is $ab$. The variable <i>constant</i> refers to all constants that can be taken out of the integral and are multipled at the end of the analytical integration method, and is composed of the contraction coefficents for the guassians, and the normalization constants, which are equal to\n",
-    "$(\\dfrac{2\\alpha}{\\pi})^{3/4}$. Any variables named <i>c</i> followed by a number represent a constant that can be pulled out of the integral, and is multiplied into the general <i>constant</i> variable. Any variable with the name <i>distance</i> refers to the distance between two primative guassians. <i>e</i> refers to some value that is taken to the power of $e$ and is multipled into the integral. <i>term</i> variables followed by a number represent a specific computaional portion of the integral that is placed into a variable to produce a more legible code. \n",
+    "$\\alpha$ and $\\beta$ both refer to the orbital coefficent of a gaussian that represents how widespread or narrow the gaussian will be. The sum of $\\alpha+\\beta$ is $p$, while the product of $\\alpha\\cdot\\beta$ is $ab$. The variable <i>constant</i> refers to all constants that can be taken out of the integral and are multipled at the end of the analytical integration method, and is composed of the contraction coefficents for the gaussians, and the normalization constants, which are equal to\n",
+    "$(\\dfrac{2\\alpha}{\\pi})^{3/4}$. Any variables named <i>c</i> followed by a number represent a constant that can be pulled out of the integral, and is multiplied into the general <i>constant</i> variable. Any variable with the name <i>distance</i> refers to the distance between two primative gaussians. <i>e</i> refers to some value that is taken to the power of $e$ and is multipled into the integral. <i>term</i> variables followed by a number represent a specific computaional portion of the integral that is placed into a variable to produce a more legible code. \n",
     "    \n",
     "Located on Page 412 of Szabo.  \n",
     "</p>"
@@ -71,15 +71,15 @@
     "                S[index1].append(0)\t\t\t\n",
     "\n",
     "                #overlap integral is simply the integral of basis function 1 times basis function 2\n",
-    "                #is done with guassians thorough guassian multiplication, which results in a new \n",
-    "                #guassian which is then integrated analytically, \n",
+    "                #is done with gaussians thorough gaussian multiplication, which results in a new \n",
+    "                #gaussian which is then integrated analytically, \n",
     "                #and whose analytical equation is solved here for the overlap \n",
     "\n",
-    "                #iterate through all contracted guassians that compose psi1 and psi 2\n",
-    "                for cg1 in psi1.contractedGuassians:\n",
-    "                    for cg2 in psi2.contractedGuassians:\n",
+    "                #iterate through all contracted gaussians that compose psi1 and psi 2\n",
+    "                for cg1 in psi1.contractedGaussians:\n",
+    "                    for cg2 in psi2.contractedGaussians:\n",
     "\n",
-    "                        #get overlap contracted guassian \n",
+    "                        #get overlap contracted gaussian \n",
     "                        cg3 = cg1.multiply(cg2)\n",
     "\n",
     "                        #get constant to multiply overlap integral by \n",
@@ -125,12 +125,12 @@
     "        for index2, psi2 in enumerate(basis):\n",
     "            T[index1].append(0)\t\t\n",
     "\n",
-    "            #KE integral computed by taking guassian 1 times -1/2 del squared acting upon guassian 2\n",
+    "            #KE integral computed by taking gaussian 1 times -1/2 del squared acting upon gaussian 2\n",
     "            #equation located on page 427 of Szabo\n",
     "\n",
-    "            #iterate through all the contracted guassians of psi1 and psi2 \n",
-    "            for cg1 in psi1.contractedGuassians:\n",
-    "                for cg2 in psi2.contractedGuassians:\n",
+    "            #iterate through all the contracted gaussians of psi1 and psi2 \n",
+    "            for cg1 in psi1.contractedGaussians:\n",
+    "                for cg2 in psi2.contractedGaussians:\n",
     "\n",
     "                    ab = cg1.orbitalExponet * cg2.orbitalExponet\n",
     "                    p = cg1.orbitalExponet + cg2.orbitalExponet\n",
@@ -235,7 +235,7 @@
     "def nuclearAttraction(molecule):\n",
     "    \n",
     "    #init nuclear attraction matrix \n",
-    "    #each nuclear attraction list is composed of 1 matrix for each atom in the molecule, which includes a psi x psi matrix of values from the primative guassian compuatation \n",
+    "    #each nuclear attraction list is composed of 1 matrix for each atom in the molecule, which includes a psi x psi matrix of values from the primative gaussian compuatation \n",
     "    V = []\n",
     "\n",
     "    basis = molecule.getBasis()\n",
@@ -271,9 +271,9 @@
     "                errorInputs[atomIndex][index1].append([])\n",
     "                errorValues[atomIndex][index1].append([])\n",
     "\n",
-    "                #iterate through all the primative guassians\n",
-    "                for cg1 in psi1.contractedGuassians:\n",
-    "                    for cg2 in psi2.contractedGuassians:\n",
+    "                #iterate through all the primative gaussians\n",
+    "                for cg1 in psi1.contractedGaussians:\n",
+    "                    for cg2 in psi2.contractedGaussians:\n",
     "\n",
     "                        #compute data needed for the integral\n",
     "                        ab = cg1.orbitalExponet * cg2.orbitalExponet\n",
@@ -342,11 +342,11 @@
     "                for index4, psi4 in enumerate(basis):\n",
     "                    electronRepulsion[index1][index2][index3].append(0)\n",
     "\n",
-    "                    #iterate through all of the primative guassians for each of the wavefunctions\n",
-    "                    for cg1 in psi1.contractedGuassians:\n",
-    "                        for cg2 in psi2.contractedGuassians:\n",
-    "                            for cg3 in psi3.contractedGuassians:\n",
-    "                                for cg4 in psi4.contractedGuassians:\n",
+    "                    #iterate through all of the primative gaussians for each of the wavefunctions\n",
+    "                    for cg1 in psi1.contractedGaussians:\n",
+    "                        for cg2 in psi2.contractedGaussians:\n",
+    "                            for cg3 in psi3.contractedGaussians:\n",
+    "                                for cg4 in psi4.contractedGaussians:\n",
     "\n",
     "                                    pA = cg1.orbitalExponet + cg2.orbitalExponet\n",
     "                                    pB = cg3.orbitalExponet + cg4.orbitalExponet\n",
